--- a/dll/win32/msgina/lang/zh-TW.rc
+++ b/dll/win32/msgina/lang/zh-TW.rc
@@ -3,7 +3,7 @@
  * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
  * PURPOSE:     Chinese (Traditional) resource file
  * TRANSLATORS: Copyright 2016 Henry Tang Ih <henrytang2@hotmail.com>
- *              Copyright 2021 Chan Chilung <eason066@gmail.com>
+ *              Copyright 2021-2022 Chan Chilung <eason066@gmail.com>
  */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_TRADITIONAL
@@ -56,12 +56,12 @@ BEGIN
     GROUPBOX "登入資訊", IDC_STATIC, 7, 50, 261, 52
     LTEXT "<Message>", IDC_SECURITY_MESSAGE, 15, 62, 245, 18
     LTEXT "<Logon date>", IDC_SECURITY_LOGONDATE, 15, 83, 245, 8
-    CTEXT "你想要做什麼？", IDC_STATIC, 10, 108, 255, 8
-    PUSHBUTTON "鎖定電腦", IDC_SECURITY_LOCK, 7, 124, 80, 14
-    PUSHBUTTON "登出...", IDC_SECURITY_LOGOFF, 98, 124, 80, 14
-    PUSHBUTTON "關閉...", IDC_SECURITY_SHUTDOWN, 188, 124, 80, 14
-    PUSHBUTTON "更改密碼...", IDC_SECURITY_CHANGEPWD, 7, 143, 80, 14
-    PUSHBUTTON "工作管理員", IDC_SECURITY_TASKMGR, 98, 143, 80, 14
+    CTEXT "您想要做什麼？", IDC_STATIC, 10, 108, 255, 8
+    PUSHBUTTON "鎖定電腦(&K)", IDC_SECURITY_LOCK, 7, 124, 80, 14
+    PUSHBUTTON "登出(&L)...", IDC_SECURITY_LOGOFF, 98, 124, 80, 14
+    PUSHBUTTON "關機(&S)...", IDC_SECURITY_SHUTDOWN, 188, 124, 80, 14
+    PUSHBUTTON "更改密碼(&C)...", IDC_SECURITY_CHANGEPWD, 7, 143, 80, 14
+    PUSHBUTTON "工作管理員(&T)", IDC_SECURITY_TASKMGR, 98, 143, 80, 14
     PUSHBUTTON "取消", IDCANCEL, 188, 143, 80, 14
 END
 
@@ -120,7 +120,7 @@ CAPTION "登出 ReactOS"
 FONT 9, "新細明體", 400, 0, 1
 BEGIN
     ICON IDI_LOGOFF, IDC_STATIC, 7, 7, 20, 20
-    LTEXT "你確定你想要登出？", IDC_STATIC, 35, 16, 146, 8
+    LTEXT "您確定您想要登出？", IDC_STATIC, 35, 16, 146, 8
     PUSHBUTTON "是", IDYES, 41, 39, 50, 14, BS_DEFPUSHBUTTON
     PUSHBUTTON "否", IDNO, 95, 39, 50, 14
 END
@@ -133,7 +133,7 @@ BEGIN
     CONTROL IDI_ROSLOGO, IDC_ROSLOGO, "Static", SS_BITMAP, 0, 0, 275, 54
     CONTROL IDI_BAR, IDC_BAR, "Static", SS_BITMAP, 0, 44, 275, 4
     ICON IDI_SHUTDOWN, IDC_STATIC, 9, 57, 21, 20, WS_GROUP
-    LTEXT "你想讓電腦做什麼？(&W)", IDC_STATIC, 39, 57, 167, 10
+    LTEXT "您想讓電腦做什麼？(&W)", IDC_STATIC, 39, 57, 167, 10
     COMBOBOX IDC_SHUTDOWN_ACTION, 39, 70, 165, 210, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT "", IDC_SHUTDOWN_DESCRIPTION, 39, 93, 187, 27
     DEFPUSHBUTTON "確定", IDOK, 143, 122, 55, 14, WS_GROUP
@@ -152,7 +152,7 @@ FONT 9, "新細明體"
 BEGIN
     CONTROL IDI_ROSLOGO, IDC_ROSLOGO, "Static", SS_BITMAP, 0, 0, 275, 54
     ICON IDI_SHUTDOWN, IDC_STATIC, 9, 57, 21, 20, WS_GROUP
-    LTEXT "你想讓電腦做什麼？(&W)", IDC_STATIC, 39, 57, 167, 10
+    LTEXT "您想讓電腦做什麼？(&W)", IDC_STATIC, 39, 57, 167, 10
     COMBOBOX IDC_SHUTDOWN_ACTION, 39, 70, 190, 210, CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT "", IDC_SHUTDOWN_DESCRIPTION, 39, 93, 190, 27
     GROUPBOX "關機事件追蹤器", IDC_STATIC, 9, 122, 257, 146
