--- a/dll/win32/iernonce/lang/zh-TW.rc
+++ b/dll/win32/iernonce/lang/zh-TW.rc
@@ -17,7 +17,7 @@ BEGIN
     IDS_NOEXPORT "無法從檔案 %2 中呼叫函數 %1，因為該函數不存在或未被匯出。"
     IDS_EXECUTEERROR "執行 %1 時出現錯誤或異常。"
     IDS_NOFUNCTION "無法從檔案 %2 中找到函數 %1。"
-    IDS_NODEPENDENCY "無法載入依賴項檔案 %1。."
+    IDS_NODEPENDENCY "無法載入依賴項檔案 %1。"
     IDS_SETUPERROR "設定 %1 時出錯。這個錯誤已記錄，安裝將會繼續"
     IDS_INCOMPLETE "早前的應用程式安裝尚未完成。\n\n使用管理員帳戶登入來完成安裝。"
     IDS_SETUP "ReactOS 安裝程式"
