--- a/dll/win32/samsrv/lang/zh-TW.rc
+++ b/dll/win32/samsrv/lang/zh-TW.rc
@@ -17,7 +17,7 @@ BEGIN
     IDS_ALIAS_ADMINISTRATORS_NAME "管理員"
     IDS_ALIAS_ADMINISTRATORS_COMMENT "管理員可以無限制地訪問電腦或網域。"
     IDS_ALIAS_GUESTS_NAME "來賓"
-    IDS_ALIAS_GUESTS_COMMENT "來賓在預設情況下權限與［使用者］群組相同，"
+    IDS_ALIAS_GUESTS_COMMENT "來賓在預設情況下權限與［使用者］群組相同。"
     IDS_ALIAS_POWER_USERS_NAME "進階使用者"
     IDS_ALIAS_POWER_USERS_COMMENT "進階使用者擁有大多數管理權限，但存在一些限制。"
     IDS_ALIAS_USERS_NAME "使用者"
@@ -33,9 +33,9 @@ BEGIN
     IDS_ALIAS_NETWORK_CONFIGURATION_OPS_NAME "Network Configuration Operators"
     IDS_ALIAS_NETWORK_CONFIGURATION_OPS_COMMENT "這個群組的成員可以擁有某些系統管理權限，來管理網路功能的設定"
     IDS_ALIAS_MONITORING_USERS_NAME "Performance Monitor Users"
-    IDS_ALIAS_MONITORING_USERS_COMMENT "這個群組的成員可以遠端存取來監視這部電腦"
+    IDS_ALIAS_MONITORING_USERS_COMMENT "這個群組的成員可以遠端存取來監視這臺電腦"
     IDS_ALIAS_LOGGING_USERS_NAME "Performance Log Users"
-    IDS_ALIAS_LOGGING_USERS_COMMENT "這個群組的成員可以遠端存取來安排記錄這部電腦的性能計數器"
+    IDS_ALIAS_LOGGING_USERS_COMMENT "這個群組的成員可以遠端存取來安排記錄這臺電腦的性能計數器"
     /*
      * ATTENTION:
      *   If you translate the administrator account name, keep IDS_USER_ADMINISTRATOR_NAME and
