--- a/media/fonts/CMakeLists.txt
+++ b/media/fonts/CMakeLists.txt
@@ -25,8 +25,8 @@ list(APPEND FONT_FILES
     FreeSansBold.ttf
     FreeSansBoldOblique.ttf
     FreeSansOblique.ttf
-    FSEX301.ttf
-    FSEX301-L2.ttf
+    #FSEX301.ttf # disabled
+    #FSEX301-L2.ttf # disabled
     georgia.ttf
     georgiab.ttf
     georgiai.ttf
