--- a/base/applications/regedit/lang/zh-TW.rc
+++ b/base/applications/regedit/lang/zh-TW.rc
@@ -4,7 +4,7 @@
  * PURPOSE:     Chinese (Traditional) resource file
  * TRANSLATORS: Copyright 2016 Henry Tang Ih <henrytang2@hotmail.com>
  *              Copyright 2018 Luke Luo <njlyf2011@hotmail.com>
- *              Copyright 2021 Chan Chilung <eason066@gmail.com>
+ *              Copyright 2021-2022 Chilung Chan <eason066@gmail.com>
  */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_TRADITIONAL
@@ -22,53 +22,53 @@ END
 /* Command-line strings */
 STRINGTABLE
 BEGIN
-    STRING_USAGE "Usage:\n\
-  regedit [options] [filename] [reg_key]\n\n\
-Options:\n\
-  [no option]    Launch the graphical version of this program.\n\
-  /L:system.dat  The location of the system.dat file to be modified.\n\
-                 Compatible with any other switch. Ignored.\n\
-  /R:user.dat    The location of the user.dat file to be modified.\n\
-                 Compatible with any other switch. Ignored.\n\
-  /C             Import the contents of a registry file.\n\
-  /D             Delete a specified registry key.\n\
-  /E             Export the contents of a specified registry key to a file.\n\
-                 If no key is specified, the entire registry is exported.\n\
-  /S             Silent mode. No messages will be displayed.\n\
-  /V             Launch the GUI in advanced mode. Ignored.\n\
-  /?             Display this information and exit.\n\
-  [filename]     The location of the file containing registry information to\n\
-                 be imported. When used with [/E], this option specifies the\n\
-                 file location where registry information will be exported.\n\
-  [reg_key]      The registry key to be modified.\n\
+    STRING_USAGE "用法:\n\
+  regedit [選項] [檔案名稱] [登錄機碼]\n\n\
+選項:\n\
+  [沒有選項]     啟動本程式的圖形介面。\n\
+  /L:system.dat  要修改的 system.dat 檔案位置。\n\
+                 與任何其他切換參數相容。已略過。\n\
+  /R:user.dat    要修改的 user.dat 檔案位置。\n\
+                 與任何其他切換參數相容。已略過。\n\
+  /C             匯入登錄檔案的內容。\n\
+  /D             刪除指定的登錄機碼。\n\
+  /E             匯出指定的登錄機碼內容到檔案。\n\
+                 如果沒有指定機碼，則會匯出整個註冊表。\n\
+  /S             靜音模式。不會顯示訊息。\n\
+  /V             以進階模式啟動圖形介面。已略過。\n\
+  /?             顯示這個資訊並結束。\n\
+  [檔案名稱]     要匯入的註冊表資訊檔案的位置。\n\
+                 當與 [/E] 一起使用時，這個選項\n\
+                 會指定註冊表資訊檔案的匯出位置。\n\
+  [登錄機碼]     要修改的登錄機碼。\n\
 \n\
-Usage examples:\n\
+使用範例:\n\
   regedit ""import.reg""\n\
   regedit /E ""export.reg"" ""HKEY_CURRENT_USER\\Console""\n\
   regedit /D ""HKEY_LOCAL_MACHINE\\Error\\Path""\n"
-    STRING_INVALID_SWITCH "regedit: Invalid or unrecognized switch [%1]\n"
-    STRING_HELP "Type ""regedit /?"" for help.\n"
-    STRING_NO_FILENAME "regedit: No filename was specified.\n"
-    STRING_NO_REG_KEY "regedit: No registry key was specified for removal.\n"
-    STRING_FILE_NOT_FOUND "regedit: The file '%1' was not found.\n"
-    STRING_CANNOT_OPEN_FILE "regedit: Unable to open the file '%1'.\n"
-    STRING_UNHANDLED_ACTION "regedit: Unhandled action.\n"
-    STRING_OUT_OF_MEMORY "regedit: Out of memory! (%1!S!, line %2!u!)\n"
-    STRING_INVALID_HEX "regedit: Invalid hexadecimal value.\n"
-    STRING_CSV_HEX_ERROR "regedit: Unable to convert hexadecimal data. An invalid value was encountered at '%1'.\n"
-    STRING_ESCAPE_SEQUENCE "regedit: Unrecognized escape sequence [\\%1!c!]\n"
-    STRING_UNKNOWN_DATA_FORMAT "regedit: Unsupported registry data type [0x%1!x!]\n"
-    STRING_UNEXPECTED_EOL "regedit: Unexpected end of line in '%1'.\n"
-    STRING_UNRECOGNIZED_LINE "regedit: The line '%1' was not recognized.\n"
-    STRING_SETVALUE_FAILED "regedit: Unable to add the registry value '%1' to '%2'.\n"
-    STRING_OPEN_KEY_FAILED "regedit: Unable to open the registry key '%1'.\n"
-    STRING_UNSUPPORTED_TYPE "regedit: Unsupported registry data type [0x%1!x!] encountered in '%2'.\n"
-    STRING_EXPORT_AS_BINARY "regedit: The registry value '%1' will be exported as binary data.\n"
-    STRING_INVALID_SYSTEM_KEY "regedit: Invalid system key [%1]\n"
-    STRING_REG_KEY_NOT_FOUND "regedit: Unable to export '%1'. The specified registry key was not found.\n"
-    STRING_DELETE_FAILED "regedit: Unable to delete the registry key '%1'.\n"
-    STRING_UNKNOWN_TYPE "Unknown Type"
-    STRING_INVALID_LINE_SYNTAX, "regedit: The line contains invalid syntax.\n"
+    STRING_INVALID_SWITCH "regedit: 無效或無法辨識的切換參數 [%1]\n"
+    STRING_HELP "輸入 ""regedit /?"" 以取得說明。\n"
+    STRING_NO_FILENAME "regedit: 未指定檔案名稱。\n"
+    STRING_NO_REG_KEY "regedit: 未指定要移除的登錄機碼。\n"
+    STRING_FILE_NOT_FOUND "regedit: 找不到檔案 '%1'。\n"
+    STRING_CANNOT_OPEN_FILE "regedit: 無法開啟檔案 '%1'。\n"
+    STRING_UNHANDLED_ACTION "regedit: 未處理的操作。\n"
+    STRING_OUT_OF_MEMORY "regedit: 記憶體不足！(%1!S!, line %2!u!)\n"
+    STRING_INVALID_HEX "regedit: 錯誤的十六進位值。\n"
+    STRING_CSV_HEX_ERROR "regedit: 無法轉換十六進位資料。在 '%1' 遇到錯誤的值。\n"
+    STRING_ESCAPE_SEQUENCE "regedit: 無法辨識的逸出序列 [\\%1!c!]\n"
+    STRING_UNKNOWN_DATA_FORMAT "regedit: 不支援的登錄資料類型 [0x%1!x!]\n"
+    STRING_UNEXPECTED_EOL "regedit: 在 '%1' 發現意外的結尾。\n"
+    STRING_UNRECOGNIZED_LINE "regedit: 無法辨識列 '%1'。\n"
+    STRING_SETVALUE_FAILED "regedit: 無法從 '%1' 新增登錄值到 '%2'。\n"
+    STRING_OPEN_KEY_FAILED "regedit: 無法開啟登錄機碼 '%1'。\n"
+    STRING_UNSUPPORTED_TYPE "regedit: 在 '%2' 遇到不支援的登錄資料類型 [0x%1!x!]。\n"
+    STRING_EXPORT_AS_BINARY "regedit: 登錄值 '%1' 將以二進位資料匯出。\n"
+    STRING_INVALID_SYSTEM_KEY "regedit: 錯誤的系統金鑰 [%1]\n"
+    STRING_REG_KEY_NOT_FOUND "regedit: 無法匯出 '%1'。找不到指定的登錄機碼。\n"
+    STRING_DELETE_FAILED "regedit: 無法刪除登錄機碼 '%1'。\n"
+    STRING_UNKNOWN_TYPE "不明類型"
+    STRING_INVALID_LINE_SYNTAX, "regedit: 該列有錯誤的語法。\n"
 END
 
 /* Menus */
