--- a/base/shell/explorer/lang/zh-TW.rc
+++ b/base/shell/explorer/lang/zh-TW.rc
@@ -4,7 +4,7 @@
  * PURPOSE:     Chinese (Traditional) resource file
  * TRANSLATORS: Copyright 2015 Alvin Wong <alvinhochun@gmail.com>
  *              Copyright 2018 Luke Luo <njlyf2011@hotmail.com>
- *              Copyright 2021 Chan Chilung <eason066.gmail.com>
+ *              Copyright 2021-2022 Chilung Chan <eason066.gmail.com>
  */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_TRADITIONAL
@@ -204,6 +204,6 @@ STRINGTABLE
 BEGIN
     IDS_TASKBAR_STARTMENU_PROP_CAPTION "工作列及開始功能表"
     IDS_RESTORE_ALL "顯示開啟的視窗(&S)"
-    IDS_TRAYWND_UNDO_CASCADE "&Undo Cascade"
-    IDS_TRAYWND_UNDO_TILE "&Undo Tile"
+    IDS_TRAYWND_UNDO_CASCADE "復原 重疊視窗(&U)"
+    IDS_TRAYWND_UNDO_TILE "復原 並排視窗(&U)"
 END
