--- a/dll/cpl/hotplug/lang/zh-TW.rc
+++ b/dll/cpl/hotplug/lang/zh-TW.rc
@@ -2,7 +2,7 @@
  * PROJECT:     Safely Remove Hardware Applet
  * LICENSE:     GPL-2.0-or-later (https://spdx.org/licenses/GPL-2.0-or-later)
  * PURPOSE:     Chinese (Traditional) resource file
- * TRANSLATORS: Copyright 2021 Chan Chilung <eason066@gmail.com>
+ * TRANSLATORS: Copyright 2021-2022 Chilung Chan <eason066@gmail.com>
  */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_TRADITIONAL
@@ -42,5 +42,5 @@ END
 STRINGTABLE
 BEGIN
     IDS_CPLNAME "安全地移除硬體"
-    IDS_CPLDESCRIPTION "Safely unplug or eject devices from your computer."
+    IDS_CPLDESCRIPTION "安全地從您的電腦拔除或退出裝置。"
 END
