--- a/dll/win32/shell32/lang/zh-TW.rc
+++ b/dll/win32/shell32/lang/zh-TW.rc
@@ -4,7 +4,7 @@
  * PURPOSE:     Chinese (Traditional) resource file
  * TRANSLATORS: Copyright 2011 Elton Chung aka MfldElton <elton328@gmail.com>
  *              Copyright 2019 Luke Luo <njlyf2011@hotmail.com>
- *              Copyright 2021 Chan Chilung <eason066@gmail.com>
+ *              Copyright 2021-2022 Chilung Chan <eason066@gmail.com>
  */
 
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_TRADITIONAL
@@ -991,8 +991,8 @@ BEGIN
 
     IDS_TITLE_MYCOMP "我的電腦"
     IDS_TITLE_MYNET "網路上的芳鄰"
-    IDS_TITLE_BIN_1 "Recycle Bin (full)"
-    IDS_TITLE_BIN_0 "Recycle Bin (empty)"
+    IDS_TITLE_BIN_1 "資源回收筒（滿）"
+    IDS_TITLE_BIN_0 "資源回收筒（空）"
 
     IDS_ADVANCED_FOLDER "檔案和資料夾"
     IDS_ADVANCED_NET_CRAWLER "自動搜尋網路資料夾和印表機"
